# awkward

./: Cargo.toml  README.md  example-header  fizzbuzz.awd  sample.awd
docs/: design.md
examples/: example1.txt  fizzbuzz.awd  prog1.awd
src/: expr.rs  grammar.rs  main.rs  program.rs  record.rs  types.rs  value.rs
